welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: type mismatch;
 found   : Unit
 required: Boolean
	 else if ( isMorning== false && isMom== false) {return true}
              ^